# led-control

./: .flake8  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  TODO.md  _config.yml  animations.md  buildandrun.sh  buildcss  config.json.error  huepalettes.json  ledcontrol.json  mobile-icon.afdesign  patterns.md  pico_sdk_import.cmake  preinstall  renderpreviews.py  restrictedtest.py  setup.py
.devcontainer/: Dockerfile  devcontainer.json
firmware/: CMakeLists.txt  backend.c  backend.h  config.h  lwipopts.h  main.c  wifi.c  wifi.h  wifi_config.h  ws2812b.h  ws2812b.pio
ledcontrol/: __init__.py  __main__.py  animationcontroller.py  animationcontroller.py.1590679cc77945884ef32b99388f0ed2.py  animationfunctions.py  animationpatterns.py  animationpatterns.py.11eceb1f423d80c1d3cbb54622d90cd2.py  app.py  colorpalettes.py  controlclient.py  homekit.py  intervaltimer.py  ledcontroller.py  ledmodes.py  pixelmappings.py  profile.py  rpi_ws281x.i  rpi_ws281x.py  rpi_ws281x_wrap.c  utils.py
ledcontrol/driver/: __init__.py  animation_utils.h  color_types.h  driver_non_raspberry_pi.py  led_render.h  ledcontrol_rpi_ws281x_driver.py  ledcontrol_rpi_ws281x_driver_wrap.c  rpi_ws281x.py  rpi_ws281x_helper.py
ledcontrol/driver/lib/: __init__.py  ledcontrol_rpi_ws281x_driver.i
ledcontrol/rpi_ws281x/: __init__.py  rpi_ws281x.py
ledcontrol/rpi_ws281x/lib/: __init__.py  animation_utils.h  led_render.h  rpi_ws281x.i  rpi_ws281x.py  rpi_ws281x_wrap.c
ledcontrol/static/: index-vue.html  index.html  manifest.webmanifest
ledcontrol/static/css/: I2UFCX~L  I2UFCX~L.MAP  codemirror-custom.css  fonts.css  index.css  index.css.map  index.scss  style.css  style.less  variables.scss
ledcontrol/static/js/: Store.js  app.js  axios.min.js  codemirror.js  lodash.min.js  main.js  vue.global.prod.js
ledcontrol/static/js/components/: GroupConfig.js  GroupControls.js  PaletteColorBar.js  SliderNumberInput.js
ledcontrol/static/js/pages/: ControlPage.js  SetupPage.js
ledcontrol/templates/: index.html
